plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    alias libs.plugins.neogradle
    alias libs.plugins.machete // automatic jar compressing on build
    // alias libs.plugins.shadow
    alias libs.plugins.spotless
}

version = mod_version
group = maven_group

base {
    archivesName = mod_id
}

// Mojang ships Java 21 to end users in 1.20.5+, so your mod should target Java 21.
java.toolchain.languageVersion = JavaLanguageVersion.of(21)

// Formats the mod version to include the loader, Minecraft version, and build number (if present)
String buildNumber = System.getenv("GITHUB_ACTION_NUMBER")
version = "${mod_version}" + (buildNumber != null ? "-build_${System.getenv("GITHUB_RUN_NUMBER")}" : "")

apply from: "$rootDir/gradle/scripts/neogradle.gradle"
apply from: "$rootDir/gradle/scripts/repositories.gradle"
apply from: "$rootDir/gradle/scripts/jars.gradle"
apply from: "$rootDir/gradle/scripts/publishing.gradle"
apply from: "$rootDir/dependencies.gradle"
apply from: "$rootDir/gradle/scripts/resources.gradle"
apply from: "$rootDir/gradle/scripts/spotless.gradle"

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

machete {
    // disable machete locally for faster builds
    enabled = false
}

compileJava.options.encoding = 'UTF-8'
